--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -49,8 +49,7 @@ general {
     gaps_in = 5
     gaps_out = 10
     border_size = 2
-    col.active_border = rgb(FFFFFF) rgb(FFFFFF)
-    col.inactive_border = rgb(000000)
+    col.active_border = rgb(f26896) rgb(689df2)
 
     layout = dwindle
 }
@@ -135,6 +134,7 @@ bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
 bind = $mainMod, Z, exec, firefox
 bind = $mainMod, G, exec, bash ~/.config/gBar/stopstart.sh
+bind = $mainMod, W, exec, pavucontrol-qt
 
 # Move focus with mainMod + arrow keys
 bind = $mainMod, left, movefocus, l
