--- a/gBar/config
+++ b/gBar/config
@@ -73,7 +73,7 @@ DateTimeStyle: %a %D - %H:%M:%S %Z
 DateTimeLocale: en_US.UTF-8
 
 # Adds a audio input(aka. microphone) widget
-AudioInput: true
+AudioInput: false
 
 # Sets the audio slider to be on reveal (Just like the sensors) when true. Only affects the bar.
 AudioRevealer: true
@@ -87,7 +87,7 @@ AudioNumbers: true
 # Command that is run to check if there are out-of-date packages.
 # The script should return *ONLY* a number. If it doesn't output a number, updates are no longer checked.
 # Default value is applicable for Arch Linux. (See data/update.sh for a human-readable version)
-CheckPackagesCommand: p="$(checkupdates)"; e=$?; if [ $e -eq 127 ] ; then exit 127; fi; if [ $e -eq 2 ] ; then echo "0" && exit 0; fi; echo "$p" | wc -l
+CheckPackagesCommand: checkupdates | wc -l
 
 
 # How often to check for updates. In seconds
